--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     content="Rico em ativos, age de forma eficaz no auxílio contra a impotência, ejaculação precoce e o aumento Peniano, seu uso diário é o segredo para a vitalidade e o prazer.">
   <meta name="keywords" content="cupom, desconto, razagan">
 
-  <link rel="alternate" href="https://razagan.desconto.click" hreflang="pt-br" />
-  <link rel=“canonical” href=“https://razagan.desconto.click” />
+  <link rel="alternate" href="https://razagan.aprovamos.online" hreflang="pt-br" />
+  <link rel=“canonical” href=“https://razagan.aprovamos.online” />
 
 
   <!-- // INICIO SNIPPET PRODUTO // -->
@@ -299,7 +299,7 @@
     "@type": "Product",
     "name": "Razagan V12",
     "image": [
-      "https://images.desconto.click/razagan.webp"
+      "https://images.aprovamos.online/razagan.webp"
      ],
     "description": "Rico em ativos, age de forma eficaz no auxílio contra a impotência, ejaculação precoce e o aumento Peniano, seu uso diário é o segredo para a vitalidade e o prazer.",
     "sku": "",
@@ -327,7 +327,7 @@
     },
     "offers": {
       "@type": "Offer",
-      "url": "https://razagan.desconto.click/",
+      "url": "https://razagan.aprovamos.online/",
       "priceCurrency": "BRL",
       "price": "285.00",
       "priceValidUntil": "2026-12-25",
@@ -384,7 +384,7 @@
 
     <div class="containerzao">
       <div class="imagem"> <a href="usar-o-cupom.html" alt="OFERTA" title="COMPRE BARATO"><img
-            src="https://images.desconto.click/razagan-v12.webp" alt="Razagan" width="172" height="260"></a></div>
+            src="https://images.aprovamos.online/razagan-v12.webp" alt="Razagan" width="172" height="260"></a></div>
 
       <div class="descricao">
         <p>   RAZAGAN V12 é um produto natural, seu uso diário é o segredo para a vitalidade e o prazer. Rico em ativos, ele age de forma eficaz no auxílio contra a impotência, ejaculação precoce e o aumento Peniano. RAZAGAN é completo e eficaz na melhoria do rendimento físico, sexual e aumento da libido.
@@ -806,14 +806,14 @@
 
   <footer class="container-footer">
     <div class="text-rodape">
-      <div class="a"><a href="https://desconto.click/termos.html" class="text-rodape">Termos de Uso</a> | <a
-          href="https://desconto.click/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
-          href="https://desconto.click/" class="text-rodape">Mais Cupons</a>
+      <div class="a"><a href="https://aprovamos.online/termos.html" class="text-rodape">Termos de Uso</a> | <a
+          href="https://aprovamos.online/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
+          href="https://aprovamos.online/" class="text-rodape">Mais Cupons</a>
         </div>
     </div>
     <div class="container-footer">
       <div class="text-rodape">
-        <h4> Desconto.Click © Todos os direitos reservados.</h4>
+        <h4> aprovamos.online © Todos os direitos reservados.</h4>
       </div>
     </div>
   </footer>
